<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.fragments.register.RegistrationFragment">

    <ImageView
        android:id="@+id/im_icon"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/notes_a"
        app:layout_constraintBottom_toTopOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_by_number"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginHorizontal="30sp"
        android:background="@drawable/rounder"
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:drawablePadding="12dp"
        android:hint="@string/Вашномер"
        android:paddingStart="18dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_code"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounder"
        android:drawableStart="@drawable/gmail"
        android:drawablePadding="12dp"
        android:hint="@string/Вашкод"
        android:paddingStart="18dp"
        android:textColorHint="#676666"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mat_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="#D88B02"
        android:text="@string/Получитькод"
        app:cornerRadius="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_code"
        app:layout_constraintVertical_bias="0.143" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mat_button2"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="#D88B02"
        android:text="@string/Потвердить"
        app:cornerRadius="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_code"
        app:layout_constraintVertical_bias="0.63" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_again"
        android:textColor="#F69300"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mat_button"
        app:layout_constraintVertical_bias="0.1" />
</androidx.constraintlayout.widget.ConstraintLayout>